add port to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
       POSTGRES_USER: newsela
       POSTGRES_PASSWORD: newsela-password
       POSTGRES_DB: newsela_db
+    ports:
+      - "5432:5432"
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
